--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "note-taker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.16.4",
+    "uniqid": "^5.4.0",
+    "unique-id": "^1.0.2"
   }
 }
