--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "uniqid": "^5.4.0",
-    "unique-id": "^1.0.2"
+    "unique-id": "^1.0.2",
+    "uuid": "^9.0.1"
   }
 }
